test_data/Json/ContainedInEnvironment/Unexpected/Unserializable/InvalidModelType/Submodel/invalidModelType.json.exception
submodels[0]: Invalid modelType, expected 'Submodel', but got: 'aCompletelyInvalidModelType'